Added computation w_analytic of weights

--- a/DOCS/README
+++ b/DOCS/README
@@ -23,7 +23,8 @@ If you do use our software, please cite us!
 ############# Install ################
 
 - Just unpack the .tar package and run:
-	./compile_simus.sh for compilation (./compile_simus_mac.sh for mac users with Clang compilers).
+	./compile_simus.sh 
+		for compilation (./compile_simus_mac.sh for mac users with Clang compilers).
 
 Notes:
 
@@ -38,21 +39,8 @@ Notes:
 1. To provide yourself the strength sequence and randomize the network using a maximum entropy approach, type:
 
 ./simus_cust 
-*	Arguments:
- *		1. Number of nodes (int)
- *		2.initial seed for random generator (int)
- * 		3. Undirected (0) or Directed (1)
- * 		4. Method: 0 (canonical, multinomial), 1 (grand-canonical, poisson + multinomial), 2 (grand-canonical, poisson indep.), 3(micro-canonical)
- * 		5. Print adj list? 0 (no), 1 (yes)
- * 		6. file_s --> Path to file with strength sequence in form on each line: "node_num(int) s_out(int) s_in(int)\n" in the directed case, "node_num (int) s(int)\n" otherwise
- *		7. Exponent for log-binning (-1 for no log binning)
- *		8. Number of reps for averaging (int)
- *		9. Verbose (1 for on, 0 for off)
- * 		10. Clustering option (warning: Depending on av_s makes simulations orders of magnitude slower)
-*		11. Self-loop option (1 for accepting self-loops, 0 for non accepting)
-
-
-For both cases:
+	and the specified options. To get a list of options just type ./simus_cust help
+	
 
 The generated outputs are files with extension "*.hist" if they correspond to network statistics (log binned), "*.tr" for the network in weighted adjacency format and "*.list" for the node list with different features.
 
@@ -69,6 +57,8 @@ The file *ens_rXnode_list.list contains ensemble averages for different node fea
 
 Please note that the averages for Y2, Clustering and Average neighbor properties are performed only over realizations where the nodes exist!
 
+For details on the simulations, see [2].
+
 
 ######## Roadmap ##########
 
@@ -82,4 +72,4 @@ If you wish to contribute please contact osagarra@ub.edu.
 
 ####### Known issues #######
 
-Don't be too brave simulating high average occupation numbers if N_nodes is high, you'll probably reach the limit of your computer. The algorithm has been tested up to 5e5 nodes and av_w = 0.1 but not further.
+Don't be too brave simulating high average occupation numbers if N_nodes is high for the Canonical case, you'll probably reach the limit of your computer. The algorithm has been tested up to 5e5 nodes and av_w = 0.1 but not further.
